# pymongo-change-stream-reader

./: .gitignore  README.md  architecture.drawio  pyproject.toml  setup.py
pymongo_change_stream_reader/: app_context.py  base_application.py  base_worker.py  commit_event_decoder.py  exceptions.py  main.py  messages.py  models.py  settings.py  utils.py
pymongo_change_stream_reader/change_stream_reading/: __init__.py  builder.py  change_handler.py  change_stream_reader.py  resume_token.py  watch.py
pymongo_change_stream_reader/committing/: __init__.py  builder.py  commit_event_handler.py  commit_flow.py  commit_processing.py  committer.py  token_saver.py
pymongo_change_stream_reader/managing/: __init__.py  builder.py  manager.py
pymongo_change_stream_reader/producing/: __init__.py  builder.py  change_event_handler.py  kafka_wrapper.py  producer.py  producer_flow.py  timeout.py
tests/: conftest.py  test_change_events_encode_decode.py  test_imports.py  test_mongo_mock_client.py
tests/mocks/: change_stream_reading.py  committing.py  events.py  kafka.py  mongo.py  mongo_client.py  producing.py
tests/test_change_stream_reading/: test_application.py
tests/test_commit_flow/: test_commit_event_handler.py  test_commit_flow.py  test_decoders.py  test_process_commit_event.py  test_token_saver.py
tests/test_commit_processing/: conftest.py
tests/test_file_writer/: conftest.py  test_application.py
tests/test_producer_flow/: test_kafka_client.py  test_producer.py
tests/text_commit_processing/: test_process_commit_event.py
(+1 files in other folders)
